fix: adjusting the height of utility in c1 so that it doesn't break into the next section (#763)

--- a/express/experiments/ccx0027/blocks/quick-action1/quick-action.css
+++ b/express/experiments/ccx0027/blocks/quick-action1/quick-action.css
@@ -18,6 +18,7 @@ ccl-quick-action .button-container {
 
 ccl-quick-action.quick-action-completed cclqt-remove-background {
     pointer-events: none;
+    height: 475px;
 }
 
 ccl-quick-action .quick-action-complete-overlay a[data-action='Download'] {
